Fixed runtime error

--- a/src/AvenueClothing.B2C/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.B2C/AvenueClothing.Project.Website.csproj
@@ -195,7 +195,7 @@
     <Content Include="Css\uCommerce.bootstrap.css" />
     <Content Include="Css\uCommerce.demostore.css" />
     <Content Include="Global.asax" />
-    <Content Include="packages.config" />
+    <None Include="packages.config" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Scripts\uri.min.js" />
