--- a/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
+++ b/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
@@ -140,6 +140,8 @@
     <Compile Include="Services\IMiniBasketService.cs" />
     <Compile Include="Services\Impl\MiniBasketService.cs" />
     <Compile Include="ViewModels\AddressSaveViewModel.cs" />
+    <Compile Include="ViewModels\BasketUpdateBasket.cs" />
+    <Compile Include="ViewModels\BasketUpdateBasketViewModel.cs" />
     <Compile Include="ViewModels\ConfirmationViewModel.cs" />
     <Compile Include="ViewModels\OrderlineViewModel.cs" />
     <Compile Include="ViewModels\PurchaseOrderViewModel.cs" />
@@ -172,6 +174,7 @@
     <Content Include="Scripts\js-shipping-picker.js" />
     <Content Include="Scripts\js-voucher.js" />
     <Content Include="Scripts\jsQuantityPicker.js" />
+    <Content Include="Scripts\jsUpdateBasket.js" />
     <Content Include="Views\AddToBasketButton\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
