--- a/src/AvenueClothing.Project.Catalog/AvenueClothing.Project.Catalog.csproj
+++ b/src/AvenueClothing.Project.Catalog/AvenueClothing.Project.Catalog.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Controllers\CatalogImageCaruselController.cs" />
     <Compile Include="Controllers\ProductDetailController.cs" />
     <Compile Include="Controllers\ProductPrimaryImageController.cs" />
+    <Compile Include="Controllers\ProductTitleController.cs" />
     <Compile Include="Controllers\PromotedProductsController.cs" />
     <Compile Include="Controllers\CategoryImageController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
@@ -155,6 +156,7 @@
     <Compile Include="ViewModels\CategoryNavigationRenderingViewModel.cs" />
     <Compile Include="ViewModels\CategoryRenderingViewModel.cs" />
     <Compile Include="ViewModels\ProductPrimaryImageViewModel.cs" />
+    <Compile Include="ViewModels\ProductTitleViewModel.cs" />
     <Compile Include="ViewModels\PromotedProductsViewModel.cs" />
     <Compile Include="ViewModels\FacetsRenderingViewModel.cs" />
     <Compile Include="ViewModels\HomepageCatalogViewModel.cs" />
@@ -168,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\ProductTitle\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jsPriceCalculation.js" />
