Implemented feedback on updating the basket, and adding a review now happens asynchronously without redirecting to webservice link.

--- a/src/AvenueClothing.Project.UserFeedback/AvenueClothing.Project.UserFeedback.csproj
+++ b/src/AvenueClothing.Project.UserFeedback/AvenueClothing.Project.UserFeedback.csproj
@@ -136,6 +136,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\jsAddReview.js" />
     <Content Include="Scripts\jsReviewForm.js" />
     <Content Include="Views\ReviewForm\Rendering.cshtml" />
   </ItemGroup>
