--- a/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
+++ b/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
@@ -145,8 +145,7 @@
     <Compile Include="ViewModels\BasketUpdateBasket.cs" />
     <Compile Include="ViewModels\BasketUpdateBasketViewModel.cs" />
     <Compile Include="ViewModels\ConfirmationViewModel.cs" />
-    <Compile Include="ViewModels\OrderlineViewModel.cs" />
-    <Compile Include="ViewModels\PurchaseOrderViewModel.cs" />
+    <Compile Include="ViewModels\BasketRenderingViewModel.cs" />
     <Compile Include="ViewModels\AddressRenderingViewModel.cs" />
     <Compile Include="ViewModels\AddToBasketButtonRenderingViewModel.cs" />
     <Compile Include="ViewModels\BasketPreviewViewModel.cs" />
