--- a/src/project/AvenueClothing/serialization/Layouts/Layouts/Avenue Clothing/Layout.yml
+++ b/src/project/AvenueClothing/serialization/Layouts/Layouts/Avenue Clothing/Layout.yml
@@ -20,6 +20,10 @@ SharedFields:
           id="{878E2B49-315C-4EFE-8D26-52605F78C3D6}"
           ph="header"
           uid="{B50A9C34-3986-43C9-9C08-5BA9B63E0246}" />
+        <r
+          id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
+          ph="header content"
+          uid="{83097426-E068-493D-8D1D-0BA2FD47FFF3}" />
       </d>
     </r>
 Languages:
