Added a new rendering for the footer, and added it to the front page

--- a/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
@@ -218,9 +218,11 @@
     <Content Include="Scripts\jquery-3.0.0.slim.min.js" />
     <Content Include="Scripts\jquery-3.0.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.0.0.min.map" />
+    <Content Include="Views\Footer\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="Controllers\FooterController.cs" />
     <Compile Include="Extensions\ServiceProviderDependencyResolver.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
