--- a/src/AvenueClothing.Installer/packages.config
+++ b/src/AvenueClothing.Installer/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Kamsar.WebConsole" version="1.2.2.0" targetFramework="net452" />
+  <package id="MicroCHAP" version="1.2.1.0" targetFramework="net452" />
+  <package id="Rainbow.Core" version="1.3.1" targetFramework="net452" />
+  <package id="Rainbow.Storage.Sc" version="1.3.1" targetFramework="net452" />
+  <package id="Rainbow.Storage.Yaml" version="1.3.1" targetFramework="net452" />
   <package id="uCommerce.Core" version="7.2.1.16274" targetFramework="net452" />
+  <package id="Unicorn.Core" version="3.2.0" targetFramework="net452" />
 </packages>
