Included bunch of configuration to make sitecore sync work.

--- a/src/scripts/Serialization/App_Config/Include/AvenueClothing.Serialization.Installation.config
+++ b/src/scripts/Serialization/App_Config/Include/AvenueClothing.Serialization.Installation.config
@@ -2,8 +2,8 @@
   <sitecore>
     <unicorn>
       <configurations>
-				<configuration name="Project.AvenueClothing.Website" description="AvenueClothing content" >
-					<targetDataStore physicalRootPath="c:\projects\Avenue Clothing for Sitecore\project\AvenueClothing\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
+				<configuration name="Project.AvenueClothing.Website.Installer" description="AvenueClothing content for installation" >
+					<targetDataStore physicalRootPath="$(dataFolder)\tmp\accelerator\AvenueClothing\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
 					<predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
 
 						<include name="Avenue Clothing" database="master" path="/sitecore/content"/>
