--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Initialize/Initialize.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Initialize/Initialize.config
@@ -4,5 +4,15 @@
       id="AvenueClothing.Initialize.RunAvenueClothingInstaller"
       service="UCommerce.Pipelines.IPipelineTask`1[[UCommerce.Pipelines.Initialization.InitializeArgs, UCommerce.Pipelines]], UCommerce"
       type="AvenueClothing.Installer.Pipelines.Initialize.RunAvenueClothingInstallerTask, AvenueClothing.Installer" />
+  
+    <partial-component id="Initialize">
+      <parameters>
+        <tasks>
+          <array>
+            <value insert="first">${AvenueClothing.Initialize.RunAvenueClothingInstaller}</value>
+          </array>
+        </tasks>
+      </parameters>
+    </partial-component>
   </components>
 </configuration>
