Modified configuration to match new tasks.

--- a/src/AvenueClothing.Installer/AvenueClothing.Installer.csproj
+++ b/src/AvenueClothing.Installer/AvenueClothing.Installer.csproj
@@ -140,9 +140,7 @@
     <Content Include="package\metadata\sc_revision.txt" />
     <Content Include="package\metadata\sc_version.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Postinstallation\Steps\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
