--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Initialize/Initialize.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Initialize/Initialize.config
@@ -1,9 +1,13 @@
 ﻿<configuration>
   <components>
-    <component 
+    <component
       id="AvenueClothing.Initialize.RunAvenueClothingInstaller"
       service="UCommerce.Pipelines.IPipelineTask`1[[UCommerce.Pipelines.Initialization.InitializeArgs, UCommerce.Pipelines]], UCommerce"
-      type="AvenueClothing.Installer.Pipelines.Initialize.RunAvenueClothingInstallerTask, AvenueClothing.Installer" />
+      type="AvenueClothing.Installer.Pipelines.Initialize.RunAvenueClothingInstallerTask, AvenueClothing.Installer">
+      <parameters>
+        <installationPipeline>${AvenueClothing.InstallationPipeline}</installationPipeline>
+      </parameters>
+    </component>
   
     <partial-component id="Initialize">
       <parameters>
