--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
@@ -7,7 +7,14 @@
       <parameters>
         <tasks>
           <array>
+            <value>${AvenueClothing.InstallationPipeline.CreateUCommerceSettings}</value>
+            <value>${AvenueClothing.InstallationPipeline.CreateUCommerceCatalog}</value>
+            <value>${AvenueClothing.InstallationPipeline.UpdateStandardValuesForDefinitions}</value>
+            <value>${AvenueClothing.InstallationPipeline.RunScratchIndexer}</value>
+            <value>${AvenueClothing.InstallationPipeline.SynchronizeSitecoreItems}</value>
             <value>${AvenueClothing.InstallationPipeline.ClearSitecoreCache}</value>
+            <value>${AvenueClothing.InstallationPipeline.PublishMasterDatabase}</value>
+            <value>${AvenueClothing.InstallationPipeline.MoveSitecoreConfigurationFiles}</value>
           </array>
         </tasks>
       </parameters>
@@ -17,6 +24,34 @@
     <component id="AvenueClothing.InstallationPipeline.ClearSitecoreCache"
 				   service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
 				   type="AvenueClothing.Installer.Pipelines.Installation.Tasks.ClearSitecoreCacheTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.CreateUCommerceCatalog"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateUCommerceCatalogTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.CreateUCommerceSettings"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateUCommerceSettingsTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.MoveSitecoreConfigurationFiles"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.MoveSitecoreConfigurationFilesTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.PublishMasterDatabase"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.PublishMasterDatabaseTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.RunScratchIndexer"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.RunScratchIndexerTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.SynchronizeSitecoreItems"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.SynchronizeSitecoreItemsTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.UpdateStandardValuesForDefinitions"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.UpdateStandardValuesForDefinitionsTask, AvenueClothing.Installer" />
 
   </components>
 </configuration>
