--- a/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Static/Header.yml
+++ b/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Static/Header.yml
@@ -1,26 +1,25 @@
 ﻿---
-ID: "58ecffd3-2334-4405-b032-ee97f14b2556"
-Parent: "ea28baf4-62fa-4fa9-80f9-07c39608e5e7"
+ID: "878e2b49-315c-4efe-8d26-52605f78c3d6"
+Parent: "aed5414e-7f03-469e-9c91-b3c4b3d2a1c0"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
-Path: /sitecore/layout/Renderings/Commerce/Catalog/Category
+Path: /sitecore/layout/Renderings/Commerce/Static/Header
 DB: master
 SharedFields:
-- ID: "308e88f5-cd6e-4f8f-bafe-95a47dedefdc"
-  Hint: Editable
-  Type: Checkbox
-  Value: 0
+- ID: "1a7c85e5-dc0b-490d-9187-bb1dbcb4c72f"
+  Hint: Datasource Template
+  Value: /sitecore/templates/Common/Avenue Clothing/AvenueClothing
 - ID: "5a14936f-2100-4541-b700-2f122e88f3f8"
   Hint: Data source
-  Value: "{B82B3313-82E1-4D4D-9C3C-2935E1E6E0C0}"
+  Value: /sitecore/content/AvenueClothing
 - ID: "b5b27af1-25ef-405c-87ce-369b3a004016"
   Hint: Datasource Location
-  Value: /sitecore/layout/Renderings/Commerce/Catalog/Product Card
+  Value: /sitecore/content/AvenueClothing
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
   Hint: Controller Action
   Value: Rendering
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
-  Value: Category
+  Value: Header
 Languages:
 - Language: en
   Versions:
@@ -28,4 +27,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161004T105742Z
+      Value: 20160926T125051Z
