--- a/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Transaction/Payment Picker.yml
+++ b/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Transaction/Payment Picker.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "1286733d-8e0f-4a30-9580-bb4c0fc54465"
-Parent: "526c5024-e751-476d-b9f3-58df3a13c721"
+ID: "e220d074-d6e3-46b8-a4d4-0d2331f83660"
+Parent: "f5cf3be4-c675-4392-8eaf-157117398b3a"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
-Path: /sitecore/layout/Renderings/Commerce/Sync/Create Store
+Path: /sitecore/layout/Renderings/Commerce/Transaction/Payment Picker
 DB: master
 SharedFields:
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
@@ -10,7 +10,7 @@ SharedFields:
   Value: Rendering
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
-  Value: CreateStore
+  Value: PaymentPicker
 Languages:
 - Language: en
   Versions:
@@ -18,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20160930T123903Z
+      Value: 20161026T125846Z
