--- a/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
+++ b/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
@@ -219,6 +219,9 @@
   <ItemGroup>
     <Content Include="Views\CommerceConnectBasket\Rendering.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\CommerceConnectShippingPicker\Rendering.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
