--- a/src/AvenueClothing.Project.Header/AvenueClothing.Project.Header.csproj
+++ b/src/AvenueClothing.Project.Header/AvenueClothing.Project.Header.csproj
@@ -53,8 +53,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Sitecore.Mvc">
-      <HintPath>..\..\lib\Sitecore\Sitecore.Mvc.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\lib\Sitecore\8.2\Sitecore.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
