Updated to point at the sitecore items directory in the source code for this repository when building from VS.

--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
@@ -45,9 +45,13 @@
        service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.RunScratchIndexerTask, AvenueClothing.Installer" />
 
-    <component id="AvenueClothing.InstallationPipeline.SynchronizeSitecoreItems"
+		<component id="AvenueClothing.InstallationPipeline.SynchronizeSitecoreItems"
        service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
-       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.SynchronizeSitecoreItemsTask, AvenueClothing.Installer" />
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.SynchronizeSitecoreItemsTask, AvenueClothing.Installer">
+			<parameters>
+				<SynchronizeSitecoreItemsPath></SynchronizeSitecoreItemsPath>
+			</parameters>
+		</component>
 
     <component id="AvenueClothing.InstallationPipeline.UpdateStandardValuesForDefinitions"
        service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
