Webgrease and SWO are incompatible on NuGet so we need to have it seperatly from NuGet packages.

--- a/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
@@ -231,6 +231,7 @@
     <Content Include="Views\Sidebar Static Content\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AvenueClothingHttpModule.cs" />
     <Compile Include="App_Start\AvenueClothingStartup.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="Controllers\FooterController.cs" />
