Changed path to correct sync path.

--- a/src/scripts/Serialization/App_Config/Include/AvenueClothing.Serialization.config
+++ b/src/scripts/Serialization/App_Config/Include/AvenueClothing.Serialization.config
@@ -3,7 +3,7 @@
     <unicorn>
       <configurations>
 				<configuration name="Project.AvenueClothing.Website" description="AvenueClothing content" >
-					<targetDataStore physicalRootPath="c:\projects\Avenue Clothing for Sitecore\project\AvenueClothing\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
+					<targetDataStore physicalRootPath="c:\projects\Avenue Clothing for Sitecore\src\project\AvenueClothing\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
 					<predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
 
 						<include name="Avenue Clothing" database="master" path="/sitecore/content"/>
